Fix reading dots not being aligned to right side of page due to 50px margin

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,7 +124,7 @@ nav {
 
 #scriptPage {
   align-items: center;
-  margin: 50px;
+  margin-top: 50px;
 }
 
 #actorNav {
